# bitrix24-dev-guide

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
about/: index.html
api/elements/: index.html
api/users/: index.html
docs/: about.md  index.md
docs/api/elements/: index.md
docs/api/users/: index.md
docs/assets/stylesheets/: extra.css
docs/modules/calendar/: index.md
docs/modules/catalog/: index.md
docs/modules/crm/: index.md  leads.md
docs/modules/department/: index.md
docs/modules/disk/: index.md
docs/modules/file/: index.md
docs/modules/form/: index.md
docs/modules/iblock/: index.md
docs/modules/im/: index.md
docs/modules/ldap/: index.md
docs/modules/main/: index.md
docs/modules/mobile/: index.md
docs/modules/pull/: index.md
docs/modules/sale/: index.md
docs/modules/socialnetwork/: index.md
docs/modules/tasks/: index.md
modules/calendar/: index.html
modules/catalog/: index.html
modules/crm/: index.html
modules/department/: index.html
modules/disk/: index.html
modules/file/: index.html
modules/form/: index.html
modules/iblock/: index.html
modules/im/: index.html
modules/ldap/: index.html
modules/main/: index.html
modules/menu/: index.html
modules/mobile/: index.html
modules/pull/: index.html
modules/sale/: index.html
modules/socialnetwork/: index.html
modules/tasks/: index.html
modules/user/: index.html
modules/voximplant/: index.html
operations/add/: index.html
operations/get-list/: index.html
search/: search_index.json
stylesheets/: extra.css
(+5 files in other folders)
