[tool.poetry]
name = "bitrix-faq"
version = "0.1.0"
description = "FAQ по Bitrix"
authors = ["KaymakPro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^9.6.11"
mkdocs-git-revision-date-localized-plugin = "^1.4.5"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-glightbox = "^0.4.0"
mkdocs-git-authors-plugin = "^0.9.4"
mkdocs-material-extensions = "^1.3.1"
pygments = "^2.19.1"
pymdown-extensions = "^10.14.3"
mdx-truly-sane-lists = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
