[tool.poetry]
name = "bitrix24-dev-guide"
version = "0.1.0"
description = "Comprehensive Bitrix24 API Documentation and Developer Guide"
authors = ["Axbuild <axbuild.github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
pymdown-extensions = "^10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
