[tool.poetry]
name = "bitrix24-dev-guide"
version = "0.1.0"
description = "Comprehensive Bitrix24 API Documentation and Developer Guide"
authors = ["Axbuild <axbuild.github@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.3"
mkdocs-material = {extras = ["imaging"], version = "^9.6.11"}
pymdown-extensions = "^10.7"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
